# fy-cv-guidance

./: .gitignore  README.md
docs/dji-guidance/: guidance dev manual.txt
guidance-sdk-ros/include/: DJI_guidance.h
guidance-sdk/demo/: CMakeLists.txt
guidance-sdk/demo/sdk_tracking_camshift/: CMakeLists.txt
guidance-sdk/demo/sdk_tracking_camshift/camshift/: CMakeLists.txt
guidance-sdk/examples/: CMakeLists.txt
guidance-sdk/examples/uart_example/: CMakeLists.txt
guidance-sdk/examples/uart_example/linux/: serial.cpp
guidance-sdk/examples/usb_example/: CMakeLists.txt
guidance-sdk/examples/usb_example/DJI_guidance_example/: CMakeLists.txt
include/: fy_compiler.hpp  fy_log.hpp  fy_platform.hpp
lib/OpenCV/2.4.9/linux64/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
lib/OpenCV/2.4.9/win64/msvc120/x64/vc12/staticlib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  libjasper.lib  libjasperd.lib  libjpeg.lib  libjpegd.lib  libpng.lib  libpngd.lib  libtiff.lib  libtiffd.lib  opencv_gpu249.lib  opencv_highgui249.lib  opencv_ml249.lib  opencv_nonfree249.lib  opencv_nonfree249d.lib  opencv_photo249.lib  opencv_photo249d.lib  opencv_superres249.lib  opencv_superres249d.lib  opencv_video249.lib  opencv_video249d.lib  opencv_videostab249.lib  zlib.lib  zlibd.lib
lib/libusb/1.0.9/linux64/lib/: libusb-1.0.la  libusb-1.0.so.0.1.0
lib/libusb/1.0.9/linux64/lib/pkgconfig/: libusb-1.0.pc
src/: CMakeLists.txt
src/base/: CMakeLists.txt  fy_log.cpp
src/checkerboard/: CMakeLists.txt  checker_board.cpp  conf_serializer.cpp  conf_serializer.hpp
tools/cmake/3.3.0/linux64/share/cmake-3.3/Modules/Platform/: Linux-GNU-C.cmake  Linux-GNU-CXX.cmake  Linux-GNU-Fortran.cmake
