include_directories("${GUIDANCE_SDK_EXAMPLES_PATH}/uart_example")
if(MSVC)
    add_executable( dji_guidance_uart crc16.cpp crc32.cpp protocal_uart_sdk.cpp main.cpp windows/serial.cpp)
else()
    message(STATUS "future other platforms")
endif()
target_link_libraries(dji_guidance_uart ${GUIDANCE_EXAMPLES_REQUIRED_LIBS})